GNOME Bugzilla – Bug 719784
gnome-rr.c should trap and ignore any errors when setting the primary output
Last modified: 2013-12-13 14:37:21 UTC
Created attachment 263401 [details] [review] Trap and ignore the error gnome-rr.c should trap and ignore any errors when setting the primary output This prevents the gnome-settings-daemon from crashing when trying to set the primary output using the modesetting driver (or any other driver that doesn't support primary outputs). The modesettings driver supports RandR providers (RandR 1.4) but apparently doesn't support primary outputs. We use the modesetting driver to enable PRIME on systems with hybrid graphics (intel+nvidia). Downstream bug report on Launchpad: https://bugs.launchpad.net/ubuntu/+source/gnome-desktop3/+bug/1224254
The attached patch solves the problem here.