gnome-rr: Ignore if setting the primary output fails

We already trap and ignore the error when detecting the primary
output, so, according to the same logic, we should do the same
when trying to set the primary output.

This helps with drivers such as modesetting that do not play
well with primary outputs (LP: #1224254).

https://bugzilla.gnome.org/show_bug.cgi?id=719784